# tantivy_warc_indexer

./: .rustfmt.toml  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs  pubmed.rs  warc.rs  wikipedia_abstract.rs
template/: meta.json
