[package]
name = "tantivy_warc_indexer"
version = "0.1.0"
authors = ["andy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warc = "^0.2"
derive_builder = "^0.10"
docopt = "^1.1"
serde = { version = "^1.0", features = ["derive"] }
tantivy = "^0.15"
flate2 = { version = "^1.0", features = ["zlib-ng-compat"], default-features = false }
